[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameHUDRelated/WholeScreenTowerShowPanel/Components/ColorToTowerPanel.gd" type="Script" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[node name="ColorToTowerPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 85.0
margin_bottom = 40.0
custom_constants/separation = 5

[node name="ColorInfoPanel" type="MarginContainer" parent="HBoxContainer"]
margin_top = 12.0
margin_right = 80.0
margin_bottom = 27.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorInfoPanel"]
margin_right = 80.0
margin_bottom = 15.0

[node name="ColorIcon" type="TextureRect" parent="HBoxContainer/ColorInfoPanel/VBoxContainer"]
size_flags_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ColorInfoPanel/VBoxContainer"]
margin_top = 4.0
margin_right = 80.0
margin_bottom = 15.0

[node name="ColorName" type="Label" parent="HBoxContainer/ColorInfoPanel/VBoxContainer/MarginContainer"]
margin_right = 80.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "ColorName"

[node name="TowerIconsPanel" type="MarginContainer" parent="HBoxContainer"]
margin_left = 85.0
margin_right = 85.0
margin_bottom = 40.0

[node name="TowerIconsContainer" type="GridContainer" parent="HBoxContainer/TowerIconsPanel"]
margin_bottom = 40.0
custom_constants/hseparation = 8
columns = 12
